<resources>
    <string name="app_name">LAB7</string>
    <string name="text_laboratorio_7">Laboratorio 7</string>
    <string name="text_button_iniciarSesion_loginFragment">Iniciar sesión</string>
    <string name="text_nuevoUsuario">¿Nuevo usuario? ¡Crea tu cuenta aquí!</string>
    <string name="text_button_loginFragment">Ingresa tu correo</string>
    <string name="text_button_actualizarPerfil">Actualizar perfil</string>
    <string name="text_buenosDias_homeFragment">¡Buenos días!</string>
    <string name="text_miPerfil_perfilFragment">Mi perfil</string>
    <string name="text_buttonActualizar_perfilFragment">Actualizar</string>
    <string name="text_nuevaCuenta_nuevaCuentaFragment">Nueva cuenta</string>
    <string name="textBt_crearCuenta_nuevaCuentaFragment">Crear cuenta</string>
    <string name="mensage_central_homeFragment">Hola %s, necesitamos que actualices tu perfil!</string>
    <string name="textToast">El correo ingresado no existe, por favor inténtelo de nuevo.</string>
    <string name="correoCorrecto">jcdurini@uvg.edu.gt</string>
</resources>