<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".PerfilFragment">

    <TextView
        android:id="@+id/text_miPerfil_perfilFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_miPerfil_perfilFragment"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/size_titleLab7_allFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView_fotoPerfil_perfilFragment"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="@dimen/margin_bottomAndTop_allFragment"
        />

    <ImageView
        android:layout_marginTop="@dimen/margin_verticalInterno_perfilFragment"
        android:id="@+id/imageView_fotoPerfil_perfilFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_miPerfil_perfilFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInput_actualizar_perfilFragment"
        android:background="@drawable/bc_circle"
        android:src="@drawable/ic_camera_perfil_fragment"
        android:padding="@dimen/padding_camera_perfilFragment"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_verticalInterno_perfilFragment"
        android:layout_marginHorizontal="@dimen/marginHorizontal_allFragment"
        android:id="@+id/textInput_actualizar_perfilFragment"
        android:layout_width="@dimen/size_cerodp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_fotoPerfil_perfilFragment"
        android:hint="@string/text_button_loginFragment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="@dimen/size_cerodp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@android:color/holo_orange_dark"
        android:layout_marginHorizontal="@dimen/marginHorizontal_allFragment"
        android:layout_marginBottom="@dimen/margin_bottomAndTop_allFragment"
        android:text="@string/text_buttonActualizar_perfilFragment"
        android:textAllCaps="false"
        android:textColor="@color/white"

        />

</androidx.constraintlayout.widget.ConstraintLayout>